Merge branch 'apps-7680' into 'main'
APPS-7680 Web: highlight stats ranges in spreadsheet

See merge request ggb/geogebra!10692

GitOrigin-RevId: a5e8f98573aa4bdb1a977ee7c476ff8ba46c023f